# sample-key-indexer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-compat.txt  setup.py
.claude/: launch.json
.github/workflows/: ci.yml
docs/: BRANCHING.md  COMMAND_CHEATSHEET.md  DAILY_COMMANDS.md  PROJECT_MEMORY.md  WALKTHROUGH.md
sample_key_indexer/: __init__.py  arrangement.py  audio_analysis.py  classify.py  cli.py  cross_match.py  discovery.py  index_store.py  kitchen_sink.py  models.py  music_theory.py  review_report.py  routing.py  sanitize.py  scan_manager.py  sketch.py  sketch_store.py  web_app.py
sample_key_indexer/web_static/: app.css  app.js  index.html
tests/: test_arrangement.py  test_audio_analysis.py  test_classify_and_routing.py  test_cli.py  test_cross_match.py  test_index_store.py  test_review_report.py  test_sanitize.py  test_sketch.py  test_sketch_store.py  test_web_app.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.e2e.json  vite.config.ts
web/e2e/: catalog.spec.ts  delete-library.spec.ts  filters.spec.ts  fixtures.ts  scan-wizard.spec.ts  sketch-phase2-4.spec.ts  sketch.spec.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.test.ts  client.ts
web/src/components/: ArrangementPanel.tsx  AudioPlayer.tsx  CircleOfFifths.tsx  Dashboard.test.tsx  Dashboard.tsx  FilterBar.tsx  FolderBrowser.tsx  FrequencyChart.tsx  KeyDistribution.tsx  MFCCChart.tsx  MatchPanel.tsx  PaginationBar.tsx  PianoRoll.test.tsx  PianoRoll.tsx  ReviewDiagnostic.tsx  ReviewTab.tsx  SampleDetailPanel.tsx  SampleTable.test.tsx  SampleTable.tsx  ScanWizard.tsx  SketchFilterBar.tsx  SketchResults.test.tsx  SketchResults.tsx  SketchSynth.tsx  SketchWizard.test.tsx  SketchWizard.tsx  TypePieChart.tsx
web/src/components/detail/: DeepAnalysisSection.tsx  MetadataGrid.tsx  MusicalContext.tsx  PanelHeader.tsx  PanelShell.tsx  PianoKeyboard.tsx
web/src/components/ui/: Chip.tsx  ChipGrid.tsx  ErrorBoundary.tsx  InfoTooltip.tsx  SectionLabel.tsx
web/src/hooks/: useReviewFiltering.test.ts  useReviewFiltering.ts
web/src/lib/: folder-picker.ts  key-color.ts  key-compat.ts  piano-roll.test.ts  piano-roll.ts  sample-cache.ts
web/src/store/: useAppStore.test.ts  useAppStore.ts
web/src/styles/: components.css  theme.css  tokens.css
web/src/test/: setup.ts
web/src/test/mocks/: handlers.ts
web/src/types/: api.ts
web/src/utils/: filters.ts  sample.ts
